--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,24 +5,25 @@ accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.1.3"
 androidxActivity = "1.9.3"
 androidxAppCompat = "1.7.0"
-androidxCompose = "1.7.5"
+androidxCompose = "1.7.6"
 androidxComposeMaterial3 = "1.3.1"
 androidxCore = "1.13.1"
 androidxDataStore = "1.1.1"
 androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.8.7"
 androidxMacroBenchmark = "1.3.3"
-androidxNavigation = "2.8.4"
+androidxNavigation = "2.8.5"
 androidxProfileinstaller = "1.4.1"
 androidxStartup = "1.2.0"
 androidxWindow = "1.3.0"
+androidxWidgets = "1.1.1"
 composeLottie = "6.4.1"
 composeWidget = "1.1.1"
-firebase = "33.6.0"
+firebase = "33.7.0"
 hilt = "2.52"
 kotlin = "2.0.20"
 kotlinxCoroutines = "1.9.0"
-ksp = "2.0.20-1.0.25"
+ksp = "2.0.21-1.0.27"
 material = "1.12.0"
 okhttp = "4.12.0"
 protobuf = "4.26.1"
@@ -67,6 +68,7 @@ androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = 
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-startup = { group = "androidx.startup", name = "startup-runtime", version.ref = "androidxStartup" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "androidxWindow" }
+androidx-glance-widgets = { module = "androidx.glance:glance-appwidget", version.ref = "androidxWidgets" }
 google-accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
 google-firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
 google-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
