--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -69,6 +69,8 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 androidx-startup = { group = "androidx.startup", name = "startup-runtime", version.ref = "androidxStartup" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "androidxWindow" }
 androidx-glance-widgets = { module = "androidx.glance:glance-appwidget", version.ref = "androidxWidgets" }
+androidx-glance-material = { group = "androidx.glance", name = "glance-material3", version.ref = "androidxWidgets" }
+
 google-accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
 google-firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
 google-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
