--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ kotlin = "2.0.20"
 kotlinxCoroutines = "1.9.0"
 ksp = "2.0.21-1.0.27"
 material = "1.12.0"
+mockkVersion = "1.13.14"
 okhttp = "4.12.0"
 protobuf = "4.26.1"
 retrofit = "2.11.0"
@@ -41,6 +42,9 @@ google-hilt-gradlePlugin = { group = "com.google.dagger", name = "hilt-android-g
 google-kspPlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 google-servicesPlugin = { group = "com.google.gms", name = "google-services", version = "4.4.2" }
 jetbrains-kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkVersion" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkVersion" }
 protobuf-gradlePlugin = { group = "com.google.protobuf", name = "protobuf-gradle-plugin", version = "0.9.4" }
 room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
 
